Doubled ZC frequency for Joctronic games, saving NVRAM
Support 4-solenoid stepper motor mech used by High Roller Casino, Starship Troopers, and Playboy
Fixed a bug in the TMS9995 emulation concerning port data writes
Fixed a default volume issue with the AY8910 / YM2203
Make color/brightness mappings of Data East 128x16 DMDs match the real hardware

*** ROM SUPPORT *** Thanks to Soren, ipdb.org, Silvio Finotti, tecnopinball.org, inkochnito, Carlos Paredes Compan
New:
Jac van Ham: Formula 1 (sound sometimes slows down during game)
             Ice Mania
Sport Matic: Flashman

Clones:
Addams Family, The L-5C (competition MOD) (updated with LED Ghost Fix)
Brave Team (Free Play)
Canasta '86' (Free Play)
Clown (Inder, Free Play)
Corsario (Free Play)
Creature from the Black Lagoon L-4C (competition MOD) (updated with LED Ghost Fix)
Demolition Man LX-4C (competition MOD) (updated and also now includes LED Ghost Fix)
Demolition Man H-6C (competition MOD) (updated)
Flintstones, The LX-3
Junk Yard 1.2C (competition MOD) (updated)
Lap By Lap (Free Play)
Lord of the Rings, The 3.00
Moon Light (Free Play)
Mundial 90 (Free Play)
Oba-Oba (old hardware)
Pool Sharks LA-7C (competition MOD) (updated)
Space Train (old hardware)
Spider-Man 1.02 (English, French)
Theatre of Magic 1.3XC (competition MOD) (updated)
Twilight Zone LA-9 (aka PAPA Tournament Version 9.0)

Correct Dumps:
Time Machine (LTD, 4 players) - confirmed that currently supported ROMs are correct
Twilight Zone P-3, P-4 (using later U14 and U15 sound ROMs, only PA-1 uses SP-1 sound)



Version 3.2 (October 6th, 2019) - "Sounds good II"
------------------------------------------------------------------------------

Initial efforts to start converting the PinMAME source base over to the 3-Clause BSD License (not completed yet, so for the full binary package the old license stays in place for now!)

*** CORE/CPU ***
Improved HC55516 CVSD sound emulation (most Williams/Bally machines in the Gorgar up to Twilight Zone range)