@@ -2951,7 +2951,8 @@ DRIVER(mm,10pfx)        //          10/18 W Medieval Madness (1.0 Pinball FX)
 DRIVER(mm,109)          //          06/99 W Medieval Madness (1.09 Home version)
 DRIVER(mm,109b)         //                  Medieval Madness (1.09B Home version Coin Play)
 DRIVER(mm,109c)         //                  Medieval Madness (1.09C Home version w/ profanity speech)
-DRIVER(cv,10)           //WPC-562:  10/97 B Cirqus Voltaire (1.0)
+DRIVER(cv,d52)          //WPC-562:  08/97 B Cirqus Voltaire (D.52 Prototype w/ support for old Ringmaster voice)
+DRIVER(cv,10)           //          10/97 B Cirqus Voltaire (1.0)
 DRIVER(cv,11)           //          11/97 B Cirqus Voltaire (1.1)
 DRIVER(cv,13)           //          04/98 B Cirqus Voltaire (1.3)
 DRIVER(cv,14)           //          10/98 B Cirqus Voltaire (1.4)
